--- a/css/applications.css
+++ b/css/applications.css
@@ -1,7 +1,7 @@
-  header.masthead{
-    text-align: right;
-    color: #fff(69, 235, 27);
-    background-image: url("/home/samuel/GTIJr/img/foto1.jpg");
+  header.masthead {
+    text-align: center;
+    color:black;
+    background-image: url("/img/foto1.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -34,7 +34,18 @@
       padding-top: 300px;
       padding-bottom: 200px;
     }
-  
-  .footer {
-    color: white;
-  }  
+    header.masthead .intro-text .intro-lead-in {
+      font-size: 40px;
+      font-style: bolder;
+      line-height: 40px;
+      margin-bottom: 25px;
+      font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    }
+    header.masthead .intro-text .intro-heading {
+      font-size: 55px;
+      font-weight: 700;
+      line-height: 75px;
+      margin-bottom: 50px;
+      font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    }
+  }
