--- a/app.css
+++ b/app.css
@@ -9,12 +9,12 @@ header .masthead {
   }
   
   header .masthead .intro-text {
-    padding-top: 200px;
+    padding-top: 20px;
     padding-bottom: 100px;
   }
   
   header .masthead .intro-text .intro-lead-in {
-    font-size: 20px;
+    font-size: 22px;
     font-style: bolder;
     line-height: 22px;
     margin-bottom: 25px;
@@ -22,12 +22,14 @@ header .masthead {
   }
   
   header .masthead .intro-text .intro-heading {
-    font-size: 50px;
+    font-size: 30px;
     font-weight: 1000;
-    line-height: 50px;
-    margin-bottom: 25px;
+    line-height: 60px;
+    margin-bottom: 60px;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
+  footer{color: white; }
+
   
   @media (min-width: 768px) {
     header .masthead .intro-text {
